// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when creating token 1`] = `
.c21 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c58 {
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c70 {
  background: #ffffff;
  padding: 16px;
}

.c17 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c14 {
  padding-right: 8px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c11 svg {
  height: 12px;
  width: 12px;
}

.c11 svg > g,
.c11 svg path {
  fill: #ffffff;
}

.c11[aria-disabled='true'] {
  pointer-events: none;
}

.c11:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c11:focus-visible {
  outline: none;
}

.c11:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c15 {
  height: 100%;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
}

.c12 .c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 .c16 {
  color: #ffffff;
}

.c12[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c12[aria-disabled='true'] .c16 {
  color: #666687;
}

.c12[aria-disabled='true'] svg > g,
.c12[aria-disabled='true'] svg path {
  fill: #666687;
}

.c12[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c12[aria-disabled='true']:active .c16 {
  color: #666687;
}

.c12[aria-disabled='true']:active svg > g,
.c12[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c12:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c12:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c12 svg > g,
.c12 svg path {
  fill: #ffffff;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c49 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c49:focus {
  outline: none;
}

.c49[aria-disabled='true'] {
  cursor: not-allowed;
}

.c52 {
  padding-right: 16px;
  padding-left: 16px;
}

.c54 {
  padding-left: 12px;
}

.c42 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c45 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c50 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c44 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c46 {
  color: #d02b20;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c53 {
  color: #666687;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c47 {
  line-height: 0;
}

.c43 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c43 > * + * {
  margin-top: 4px;
}

.c48 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c48:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c55 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c55 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c55 svg path {
  fill: #666687;
}

.c56 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c56 svg {
  width: 0.375rem;
}

.c51 {
  width: 100%;
}

.c19 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c20 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c20 > * + * {
  margin-top: 24px;
}

.c22 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c22 > * + * {
  margin-top: 16px;
}

.c26 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c29 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c32 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c28 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c30 {
  color: #d02b20;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c31 {
  line-height: 0;
}

.c34 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c34::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c34::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c34:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c34::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c34[aria-disabled='true'] {
  color: inherit;
}

.c34:focus {
  outline: none;
  box-shadow: none;
}

.c33 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c33:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c27 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c27 > * + * {
  margin-top: 4px;
}

.c36 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c38 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c39 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c40 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c40:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c41 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c41::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41:focus-within {
  outline: none;
}

.c37 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c37 > * + * {
  margin-top: 4px;
}

.c35 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c35 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c35 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c35 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c35 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c23 {
  color: #32324d;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c57 {
  color: #666687;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c6 {
  color: #4945ff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c4 {
  padding-right: 8px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c3 svg path {
  fill: #4945ff;
}

.c3 svg {
  font-size: 0.625rem;
}

.c3:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c3:focus-visible {
  outline: none;
}

.c3:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c92 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c1 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c2 {
  padding-bottom: 8px;
}

.c18 {
  padding-right: 56px;
  padding-left: 56px;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  color: #32324d;
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
}

.c0:focus-visible {
  outline: none;
}

.c24 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c25 {
  grid-column: span 6;
  max-width: 100%;
}

.c66 {
  font-weight: 600;
  color: #271fe0;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c69 {
  font-weight: 600;
  color: #666687;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c64 {
  background: #ffffff;
  padding: 16px;
}

.c67 {
  background: #f6f6f9;
  padding: 12px;
}

.c59 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c65 {
  border-bottom: 1px solid #ffffff;
}

.c68 {
  border-bottom: 1px solid #eaeaef;
}

.c62 {
  border: none;
  background: transparent;
  padding: 0;
  outline-offset: -2px;
}

.c61 + .c61 > .c63 {
  border-left: 1px solid #eaeaef;
}

.c62 .c63 {
  border-right: none;
}

.c62[aria-disabled='true'] {
  cursor: not-allowed;
}

.c60 > * {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c60 .c61:first-of-type .c63 {
  border-radius: 4px 0 0 0;
}

.c60 .c61:last-of-type .c63 {
  border-radius: 0 4px 0 0;
}

.c60 .c61[aria-selected="true"] .c63 {
  border-radius: 4px 4px 0 0;
  border-left: none;
  border-right: none;
}

.c84 {
  color: #4945ff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c85 {
  color: #4a4a6a;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c71 {
  border-radius: 4px;
}

.c74 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c77 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c80 {
  min-width: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c86 {
  background: #dcdce4;
  border-radius: 50%;
  cursor: pointer;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c88 {
  color: #666687;
  width: 0.6875rem;
}

.c91 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c75 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c78 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c87 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c72 {
  border: 1px solid #f6f6f9;
}

.c72:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c72:hover:not([aria-disabled='true']) .sc-wAsCI {
  color: #271fe0;
}

.c72:hover:not([aria-disabled='true']) .c83 {
  color: #4945ff;
}

.c72:hover:not([aria-disabled='true']) > .c73 {
  background: #f0f0ff;
}

.c72:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c90 {
  border: 1px solid #ffffff;
}

.c90:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c90:hover:not([aria-disabled='true']) .sc-wAsCI {
  color: #271fe0;
}

.c90:hover:not([aria-disabled='true']) .c83 {
  color: #4945ff;
}

.c90:hover:not([aria-disabled='true']) > .c73 {
  background: #f0f0ff;
}

.c90:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c81 {
  background: transparent;
  border: none;
  position: relative;
  outline: none;
}

.c81[aria-disabled='true'] {
  pointer-events: none;
}

.c81[aria-disabled='true'] svg path {
  fill: #666687;
}

.c81 svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.625rem;
}

.c81 svg path {
  fill: #4945ff;
}

.c81:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c81:focus-visible {
  outline: none;
}

.c81:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c79 > * {
  margin-left: 0;
  margin-right: 0;
}

.c79 > * + * {
  margin-left: 12px;
}

.c89 path {
  fill: #666687;
}

.c82 {
  text-align: left;
}

.c82 > span {
  max-width: 100%;
}

.c82 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c82 svg path {
  fill: #8e8ea9;
}

.c76 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c76:hover svg path {
  fill: #4945ff;
}

@media (max-width:68.75rem) {
  .c25 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c25 {
    grid-column: span 12;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div>
        <div
          class="c1"
          data-strapi-header="true"
        >
          <div
            class="c2"
          >
            <a
              aria-current="page"
              class="c3 active"
              href="/settings/api-tokens"
            >
              <span
                aria-hidden="true"
                class="c4 c5"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 01-.2.2H5.74l8.239 8.239a.2.2 0 010 .282L12.14 23.86a.2.2 0 01-.282 0L.14 12.14a.2.2 0 010-.282L11.86.14a.2.2 0 01.282 0L13.98 1.98a.2.2 0 010 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c6"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <h1
                class="c9"
              >
                Create API Token
              </h1>
            </div>
            <div
              class="c10"
            >
              <button
                aria-disabled="false"
                class="c11 c12"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class="c13 c14 c15"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 01.286 0l2.85 2.89a.2.2 0 010 .28L9.554 20.854a.2.2 0 01-.285 0l-9.13-9.243a.2.2 0 010-.281l2.85-2.892a.2.2 0 01.284 0l6.14 6.209L20.726 2.97z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c16 c17"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c18"
      >
        <div
          class="c19 c20"
          spacing="6"
        >
          <div
            class="c21"
          >
            <div
              class="c19 c22"
              spacing="4"
            >
              <h2
                class="c23"
              >
                Details
              </h2>
              <div
                class="c24"
              >
                <div
                  class="c25"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div>
                        <div
                          class="c26 c27"
                          spacing="1"
                        >
                          <label
                            class="c28"
                            for="textinput-1"
                            required=""
                          >
                            <div
                              class="c29"
                            >
                              Name
                              <span
                                class="c30 c31"
                              >
                                *
                              </span>
                            </div>
                          </label>
                          <div
                            class="c32 c33"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              class="c34"
                              id="textinput-1"
                              name="name"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c25"
                >
                  <div
                    class=""
                  >
                    <div
                      class="c35"
                    >
                      <div>
                        <div
                          class="c36 c37"
                          spacing="1"
                        >
                          <div
                            class="c38"
                          >
                            <label
                              class="c39"
                              for="textarea-1"
                            >
                              <div
                                class="c38"
                              >
                                Description
                              </div>
                            </label>
                          </div>
                          <div
                            class="c40"
                          >
                            <textarea
                              aria-invalid="false"
                              class="c41"
                              id="textarea-1"
                              name="description"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c25"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c42 c43"
                        spacing="1"
                      >
                        <span
                          class="c44"
                          for="select-1"
                          id="select-1-label"
                          required=""
                        >
                          <div
                            class="c45"
                          >
                            Token duration
                            <span
                              class="c46 c47"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c45 c48"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-1-label select-1-content"
                            class="c49"
                            id="select-1"
                            name="lifespan"
                            type="button"
                          />
                          <div
                            class="c50 c51"
                          >
                            <div
                              class="c45"
                            >
                              <div
                                class="c52"
                              >
                                <span
                                  class="c53"
                                  id="select-1-content"
                                >
                                  Unlimited
                                </span>
                              </div>
                            </div>
                            <div
                              class="c45"
                            >
                              <button
                                aria-hidden="true"
                                class="c54 c55 c56"
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c57"
                    />
                  </div>
                </div>
                <div
                  class="c25"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c42 c43"
                        spacing="1"
                      >
                        <span
                          class="c44"
                          for="select-2"
                          id="select-2-label"
                          required=""
                        >
                          <div
                            class="c45"
                          >
                            Token type
                            <span
                              class="c46 c47"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c45 c48"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-2-label select-2-content"
                            class="c49"
                            id="select-2"
                            name="type"
                            type="button"
                          />
                          <div
                            class="c50 c51"
                          >
                            <div
                              class="c45"
                            >
                              <div
                                class="c52"
                              >
                                <span
                                  class="c53"
                                  id="select-2-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c45"
                            >
                              <button
                                aria-hidden="true"
                                class="c54 c55 c56"
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c58"
          >
            <div>
              <div
                aria-label="Tabs Permissions"
                class="c59 c60"
                role="tablist"
              >
                <button
                  aria-controls="tabs-0-tabpanel"
                  aria-disabled="false"
                  aria-selected="true"
                  class="c61 c62"
                  id="tabs-0-tab"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="c63 c64 c65"
                  >
                    <span
                      class="c66"
                    >
                      Collection Types
                    </span>
                  </div>
                </button>
                <button
                  aria-disabled="false"
                  aria-selected="false"
                  class="c61 c62"
                  id="tabs-1-tab"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="c63 c67 c68"
                  >
                    <span
                      class="c69"
                    >
                      Single Types
                    </span>
                  </div>
                </button>
                <button
                  aria-disabled="false"
                  aria-selected="false"
                  class="c61 c62"
                  id="tabs-2-tab"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="c63 c67 c68"
                  >
                    <span
                      class="c69"
                    >
                      Custom
                    </span>
                  </div>
                </button>
              </div>
              <div
                style="position: relative;"
              >
                <div
                  aria-labelledby="tabs-0-tab"
                  id="tabs-0-tabpanel"
                  role="tabpanel"
                  tabindex="0"
                >
                  <div
                    class="c70"
                  >
                    <div
                      aria-disabled="false"
                      class="c71 c72"
                      data-strapi-expanded="false"
                    >
                      <div
                        class="c73 c74 c75 c76"
                        cursor=""
                      >
                        <div
                          class="c73 c77 c78 c79"
                          spacing="3"
                        >
                          <button
                            aria-controls="accordion-content-accordion-1"
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-labelledby="accordion-label-accordion-1"
                            class="c73 c80 c78 c81 c82"
                            data-strapi-accordion-toggle="true"
                            type="button"
                          >
                            <span
                              class="c83 c84"
                            >
                              <span
                                class="c83 sc-wAsCI c85"
                                id="accordion-label-accordion-1"
                              >
                                Category
                              </span>
                            </span>
                          </button>
                          <div
                            class="c73 c78 c79"
                            spacing="3"
                          >
                            <span
                              aria-hidden="true"
                              class="c73 c86 c87"
                              cursor="pointer"
                              data-strapi-dropdown="true"
                              height="2rem"
                              width="2rem"
                            >
                              <svg
                                class="c88 c89"
                                fill="none"
                                height="1em"
                                viewBox="0 0 14 8"
                                width="0.6875rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                  fill="#32324D"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      class="c71 c90"
                      data-strapi-expanded="false"
                    >
                      <div
                        class="c73 c91 c75 c76"
                        cursor=""
                      >
                        <div
                          class="c73 c77 c78 c79"
                          spacing="3"
                        >
                          <button
                            aria-controls="accordion-content-accordion-2"
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-labelledby="accordion-label-accordion-2"
                            class="c73 c80 c78 c81 c82"
                            data-strapi-accordion-toggle="true"
                            type="button"
                          >
                            <span
                              class="c83 c84"
                            >
                              <span
                                class="c83 sc-wAsCI c85"
                                id="accordion-label-accordion-2"
                              >
                                Country
                              </span>
                            </span>
                          </button>
                          <div
                            class="c73 c78 c79"
                            spacing="3"
                          >
                            <span
                              aria-hidden="true"
                              class="c73 c86 c87"
                              cursor="pointer"
                              data-strapi-dropdown="true"
                              height="2rem"
                              width="2rem"
                            >
                              <svg
                                class="c88 c89"
                                fill="none"
                                height="1em"
                                viewBox="0 0 14 8"
                                width="0.6875rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                  fill="#32324D"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c92"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when editing existing token 1`] = `
.c31 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c71 {
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c83 {
  background: #ffffff;
  padding: 16px;
}

.c18 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c15 {
  padding-right: 8px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c11 svg {
  height: 12px;
  width: 12px;
}

.c11 svg > g,
.c11 svg path {
  fill: #ffffff;
}

.c11[aria-disabled='true'] {
  pointer-events: none;
}

.c11:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c11:focus-visible {
  outline: none;
}

.c11:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c16 {
  height: 100%;
}

.c106 .c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c106 .c17 {
  color: #ffffff;
}

.c106[aria-disabled='true'] .c17 {
  color: #666687;
}

.c106[aria-disabled='true']:active .c17 {
  color: #666687;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c12 .c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 .c17 {
  color: #ffffff;
}

.c12[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c12[aria-disabled='true'] .c17 {
  color: #666687;
}

.c12[aria-disabled='true'] svg > g,
.c12[aria-disabled='true'] svg path {
  fill: #666687;
}

.c12[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c12[aria-disabled='true']:active .c17 {
  color: #666687;
}

.c12[aria-disabled='true']:active svg > g,
.c12[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c12:hover {
  background-color: #f6f6f9;
}

.c12:active {
  background-color: #eaeaef;
}

.c12 .c17 {
  color: #32324d;
}

.c12 svg > g,
.c12 svg path {
  fill: #32324d;
}

.c19 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
}

.c19 .c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c19 .c17 {
  color: #ffffff;
}

.c19[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c19[aria-disabled='true'] .c17 {
  color: #666687;
}

.c19[aria-disabled='true'] svg > g,
.c19[aria-disabled='true'] svg path {
  fill: #666687;
}

.c19[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c19[aria-disabled='true']:active .c17 {
  color: #666687;
}

.c19[aria-disabled='true']:active svg > g,
.c19[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c19:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c19:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c19 svg > g,
.c19 svg path {
  fill: #ffffff;
}

.c23 {
  background: #ffffff;
  padding: 24px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c25 {
  background: #f6f6f9;
  padding: 12px;
  border-radius: 4px;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c24 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c59 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c59:focus {
  outline: none;
}

.c59[aria-disabled='true'] {
  cursor: not-allowed;
}

.c62 {
  padding-right: 16px;
  padding-left: 16px;
}

.c64 {
  padding-left: 12px;
}

.c52 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c55 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c60 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c54 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c56 {
  color: #d02b20;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c63 {
  color: #666687;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c69 {
  color: #32324d;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c57 {
  line-height: 0;
}

.c53 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c53 > * + * {
  margin-top: 4px;
}

.c58 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  color: #666687;
  background: #eaeaef;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c58:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c68 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c68:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c65 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c65 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c65 svg path {
  fill: #666687;
}

.c66 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
  cursor: not-allowed;
}

.c66 svg {
  width: 0.375rem;
}

.c70 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c70 svg {
  width: 0.375rem;
}

.c61 {
  width: 100%;
}

.c21 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c22 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c22 > * + * {
  margin-top: 24px;
}

.c27 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c27 > * + * {
  margin-top: 4px;
}

.c32 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c32 > * + * {
  margin-top: 16px;
}

.c36 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c39 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c42 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c38 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c40 {
  color: #d02b20;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c41 {
  line-height: 0;
}

.c44 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c44::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c44::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c44:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c44::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c44[aria-disabled='true'] {
  color: inherit;
}

.c44:focus {
  outline: none;
  box-shadow: none;
}

.c43 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c43:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c37 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c37 > * + * {
  margin-top: 4px;
}

.c46 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c48 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c49 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c50 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c50:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c51 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c51::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c51::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c51:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c51::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c51:focus-within {
  outline: none;
}

.c47 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c47 > * + * {
  margin-top: 4px;
}

.c45 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c45 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c45 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c45 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c45 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c28 {
  font-weight: 500;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c30 {
  color: #666687;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c33 {
  color: #32324d;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c67 {
  color: #666687;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c6 {
  color: #4945ff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c4 {
  padding-right: 8px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c3 svg path {
  fill: #4945ff;
}

.c3 svg {
  font-size: 0.625rem;
}

.c3:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c3:focus-visible {
  outline: none;
}

.c3:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c26 {
  margin-right: 24px;
}

.c26 svg {
  width: 2rem;
  height: 2rem;
}

.c29 {
  word-break: break-all;
}

.c105 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c20 {
  padding-right: 56px;
  padding-left: 56px;
}

.c1 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c2 {
  padding-bottom: 8px;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  color: #32324d;
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
}

.c0:focus-visible {
  outline: none;
}

.c34 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c35 {
  grid-column: span 6;
  max-width: 100%;
}

.c79 {
  font-weight: 600;
  color: #271fe0;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c82 {
  font-weight: 600;
  color: #666687;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c77 {
  background: #ffffff;
  padding: 16px;
}

.c80 {
  background: #f6f6f9;
  padding: 12px;
}

.c72 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c78 {
  border-bottom: 1px solid #ffffff;
}

.c81 {
  border-bottom: 1px solid #eaeaef;
}

.c75 {
  border: none;
  background: transparent;
  padding: 0;
  outline-offset: -2px;
}

.c74 + .c74 > .c76 {
  border-left: 1px solid #eaeaef;
}

.c75 .c76 {
  border-right: none;
}

.c75[aria-disabled='true'] {
  cursor: not-allowed;
}

.c73 > * {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c73 .c74:first-of-type .c76 {
  border-radius: 4px 0 0 0;
}

.c73 .c74:last-of-type .c76 {
  border-radius: 0 4px 0 0;
}

.c73 .c74[aria-selected="true"] .c76 {
  border-radius: 4px 4px 0 0;
  border-left: none;
  border-right: none;
}

.c97 {
  color: #4945ff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c98 {
  color: #4a4a6a;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c84 {
  border-radius: 4px;
}

.c87 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c90 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c93 {
  min-width: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c99 {
  background: #dcdce4;
  border-radius: 50%;
  cursor: pointer;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c101 {
  color: #666687;
  width: 0.6875rem;
}

.c104 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c88 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c91 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c100 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c85 {
  border: 1px solid #f6f6f9;
}

.c85:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c85:hover:not([aria-disabled='true']) .sc-wAsCI {
  color: #271fe0;
}

.c85:hover:not([aria-disabled='true']) .c96 {
  color: #4945ff;
}

.c85:hover:not([aria-disabled='true']) > .c86 {
  background: #f0f0ff;
}

.c85:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c103 {
  border: 1px solid #ffffff;
}

.c103:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c103:hover:not([aria-disabled='true']) .sc-wAsCI {
  color: #271fe0;
}

.c103:hover:not([aria-disabled='true']) .c96 {
  color: #4945ff;
}

.c103:hover:not([aria-disabled='true']) > .c86 {
  background: #f0f0ff;
}

.c103:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c94 {
  background: transparent;
  border: none;
  position: relative;
  outline: none;
}

.c94[aria-disabled='true'] {
  pointer-events: none;
}

.c94[aria-disabled='true'] svg path {
  fill: #666687;
}

.c94 svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.625rem;
}

.c94 svg path {
  fill: #4945ff;
}

.c94:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c94:focus-visible {
  outline: none;
}

.c94:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c92 > * {
  margin-left: 0;
  margin-right: 0;
}

.c92 > * + * {
  margin-left: 12px;
}

.c102 path {
  fill: #666687;
}

.c95 {
  text-align: left;
}

.c95 > span {
  max-width: 100%;
}

.c95 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c95 svg path {
  fill: #8e8ea9;
}

.c89 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c89:hover svg path {
  fill: #4945ff;
}

.c13 {
  margin-right: 8px;
}

@media (max-width:68.75rem) {
  .c35 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c35 {
    grid-column: span 12;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1"
          data-strapi-header="true"
        >
          <div
            class="c2"
          >
            <a
              aria-current="page"
              class="c3 active"
              href="/settings/api-tokens"
            >
              <span
                aria-hidden="true"
                class="c4 c5"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 01-.2.2H5.74l8.239 8.239a.2.2 0 010 .282L12.14 23.86a.2.2 0 01-.282 0L.14 12.14a.2.2 0 010-.282L11.86.14a.2.2 0 01.282 0L13.98 1.98a.2.2 0 010 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c6"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <h1
                class="c9"
              >
                My super token
              </h1>
            </div>
            <div
              class="c10"
            >
              <button
                aria-disabled="false"
                class="c11 c12 c13"
                type="button"
              >
                <div
                  aria-hidden="true"
                  class="c14 c15 c16"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M15.681 2.804A9.64 9.64 0 0011.818 2C6.398 2 2 6.48 2 12c0 5.521 4.397 10 9.818 10 2.03 0 4.011-.641 5.67-1.835a9.987 9.987 0 003.589-4.831 1.117 1.117 0 00-.664-1.418 1.086 1.086 0 00-1.393.676 7.769 7.769 0 01-2.792 3.758 7.546 7.546 0 01-4.41 1.428V4.222h.002a7.492 7.492 0 013.003.625 7.61 7.61 0 012.5 1.762l.464.551-2.986 3.042a.186.186 0 00.129.316H22V3.317a.188.188 0 00-.112-.172.179.179 0 00-.199.04l-2.355 2.4-.394-.468-.02-.02a9.791 9.791 0 00-3.239-2.293zm-3.863 1.418V2v2.222zm0 0v15.556c-4.216 0-7.636-3.484-7.636-7.778s3.42-7.777 7.636-7.778z"
                      fill="#212134"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <span
                  class="c17 c18"
                >
                  Regenerate
                </span>
              </button>
              <button
                aria-disabled="false"
                class="c11 c19"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class="c14 c15 c16"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 01.286 0l2.85 2.89a.2.2 0 010 .28L9.554 20.854a.2.2 0 01-.285 0l-9.13-9.243a.2.2 0 010-.281l2.85-2.892a.2.2 0 01.284 0l6.14 6.209L20.726 2.97z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c17 c18"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c20"
      >
        <div
          class="c21 c22"
          spacing="6"
        >
          <div
            class="c23 c24"
          >
            <div
              class="c25 c24 c26"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17 14h-4.34a6 6 0 110-4H23v4h-2v4h-4v-4zM7 14a2 2 0 100-4 2 2 0 000 4z"
                  fill="#8E8EA9"
                />
              </svg>
            </div>
            <div
              class="c21 c27"
              spacing="1"
            >
              <div
                class="c24"
              >
                <span
                  class="c28 c29"
                >
                  This token isn’t accessible anymore.
                </span>
              </div>
              <span
                class="c30"
              >
                For security reasons, you can only see your token once.
              </span>
            </div>
          </div>
          <div
            class="c31"
          >
            <div
              class="c21 c32"
              spacing="4"
            >
              <h2
                class="c33"
              >
                Details
              </h2>
              <div
                class="c34"
              >
                <div
                  class="c35"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div>
                        <div
                          class="c36 c37"
                          spacing="1"
                        >
                          <label
                            class="c38"
                            for="textinput-2"
                            required=""
                          >
                            <div
                              class="c39"
                            >
                              Name
                              <span
                                class="c40 c41"
                              >
                                *
                              </span>
                            </div>
                          </label>
                          <div
                            class="c42 c43"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              class="c44"
                              id="textinput-2"
                              name="name"
                              value="My super token"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c35"
                >
                  <div
                    class=""
                  >
                    <div
                      class="c45"
                    >
                      <div>
                        <div
                          class="c46 c47"
                          spacing="1"
                        >
                          <div
                            class="c48"
                          >
                            <label
                              class="c49"
                              for="textarea-2"
                            >
                              <div
                                class="c48"
                              >
                                Description
                              </div>
                            </label>
                          </div>
                          <div
                            class="c50"
                          >
                            <textarea
                              aria-invalid="false"
                              class="c51"
                              id="textarea-2"
                              name="description"
                            >
                              This describe my super token
                            </textarea>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c35"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c52 c53"
                        spacing="1"
                      >
                        <span
                          class="c54"
                          for="select-3"
                          id="select-3-label"
                          required=""
                        >
                          <div
                            class="c55"
                          >
                            Token duration
                            <span
                              class="c56 c57"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c55 c58"
                          disabled=""
                        >
                          <button
                            aria-disabled="true"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-3-label select-3-content"
                            class="c59"
                            id="select-3"
                            name="lifespan"
                            type="button"
                          />
                          <div
                            class="c60 c61"
                          >
                            <div
                              class="c55"
                            >
                              <div
                                class="c62"
                              >
                                <span
                                  class="c63"
                                  id="select-3-content"
                                >
                                  Unlimited
                                </span>
                              </div>
                            </div>
                            <div
                              class="c55"
                            >
                              <button
                                aria-hidden="true"
                                class="c64 c65 c66"
                                disabled=""
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c67"
                    >
                      Expiration date: November 22nd, 2021
                    </span>
                  </div>
                </div>
                <div
                  class="c35"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c52 c53"
                        spacing="1"
                      >
                        <span
                          class="c54"
                          for="select-4"
                          id="select-4-label"
                          required=""
                        >
                          <div
                            class="c55"
                          >
                            Token type
                            <span
                              class="c56 c57"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c55 c68"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-4-label select-4-content"
                            class="c59"
                            id="select-4"
                            name="type"
                            type="button"
                          />
                          <div
                            class="c60 c61"
                          >
                            <div
                              class="c55"
                            >
                              <div
                                class="c62"
                              >
                                <span
                                  class="c69"
                                  id="select-4-content"
                                >
                                  Read-only
                                </span>
                              </div>
                            </div>
                            <div
                              class="c55"
                            >
                              <button
                                aria-hidden="true"
                                class="c64 c65 c70"
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c71"
          >
            <div>
              <div
                aria-label="Tabs Permissions"
                class="c72 c73"
                role="tablist"
              >
                <button
                  aria-controls="tabs-0-tabpanel"
                  aria-disabled="false"
                  aria-selected="true"
                  class="c74 c75"
                  id="tabs-0-tab"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="c76 c77 c78"
                  >
                    <span
                      class="c79"
                    >
                      Collection Types
                    </span>
                  </div>
                </button>
                <button
                  aria-disabled="false"
                  aria-selected="false"
                  class="c74 c75"
                  id="tabs-1-tab"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="c76 c80 c81"
                  >
                    <span
                      class="c82"
                    >
                      Single Types
                    </span>
                  </div>
                </button>
                <button
                  aria-disabled="false"
                  aria-selected="false"
                  class="c74 c75"
                  id="tabs-2-tab"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="c76 c80 c81"
                  >
                    <span
                      class="c82"
                    >
                      Custom
                    </span>
                  </div>
                </button>
              </div>
              <div
                style="position: relative;"
              >
                <div
                  aria-labelledby="tabs-0-tab"
                  id="tabs-0-tabpanel"
                  role="tabpanel"
                  tabindex="0"
                >
                  <div
                    class="c83"
                  >
                    <div
                      aria-disabled="false"
                      class="c84 c85"
                      data-strapi-expanded="false"
                    >
                      <div
                        class="c86 c87 c88 c89"
                        cursor=""
                      >
                        <div
                          class="c86 c90 c91 c92"
                          spacing="3"
                        >
                          <button
                            aria-controls="accordion-content-accordion-3"
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-labelledby="accordion-label-accordion-3"
                            class="c86 c93 c91 c94 c95"
                            data-strapi-accordion-toggle="true"
                            type="button"
                          >
                            <span
                              class="c96 c97"
                            >
                              <span
                                class="c96 sc-wAsCI c98"
                                id="accordion-label-accordion-3"
                              >
                                Category
                              </span>
                            </span>
                          </button>
                          <div
                            class="c86 c91 c92"
                            spacing="3"
                          >
                            <span
                              aria-hidden="true"
                              class="c86 c99 c100"
                              cursor="pointer"
                              data-strapi-dropdown="true"
                              height="2rem"
                              width="2rem"
                            >
                              <svg
                                class="c101 c102"
                                fill="none"
                                height="1em"
                                viewBox="0 0 14 8"
                                width="0.6875rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                  fill="#32324D"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      class="c84 c103"
                      data-strapi-expanded="false"
                    >
                      <div
                        class="c86 c104 c88 c89"
                        cursor=""
                      >
                        <div
                          class="c86 c90 c91 c92"
                          spacing="3"
                        >
                          <button
                            aria-controls="accordion-content-accordion-4"
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-labelledby="accordion-label-accordion-4"
                            class="c86 c93 c91 c94 c95"
                            data-strapi-accordion-toggle="true"
                            type="button"
                          >
                            <span
                              class="c96 c97"
                            >
                              <span
                                class="c96 sc-wAsCI c98"
                                id="accordion-label-accordion-4"
                              >
                                Country
                              </span>
                            </span>
                          </button>
                          <div
                            class="c86 c91 c92"
                            spacing="3"
                          >
                            <span
                              aria-hidden="true"
                              class="c86 c99 c100"
                              cursor="pointer"
                              data-strapi-dropdown="true"
                              height="2rem"
                              width="2rem"
                            >
                              <svg
                                class="c101 c102"
                                fill="none"
                                height="1em"
                                viewBox="0 0 14 8"
                                width="0.6875rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                  fill="#32324D"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c105"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
